# rainyday

./: Cargo.toml  README.md  build.rs  todo.txt
assets/shaders/: background.frag  background.vert  background_pass_blue.frag  background_pass_green.frag  background_pass_red.frag  colored_quad.frag  colored_quad.vert  cube.frag  cube.vert  drop.frag  drop.vert  drop_wipe.frag  drop_wipe.vert  final.frag  quad.frag  quad.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: background.rs  config.rs  config_window.rs  cube.rs  debug.rs  debug_ui.rs  drop.rs  drop_quad.rs  droplet.rs  droplets.rs  main.rs  quad.rs  rain.rs  resources.rs  vertex.rs
src/render_gl/: buffer.rs  color_buffer.rs  data.rs  framebuffer.rs  mod.rs  renderbuffer.rs  shader.rs  texture.rs  viewport.rs
