[package]
name = "rainyday_gl"
version = "0.1.0"
authors = ["Amir Grozki <amirgrozki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
failure = "0.1"
render_gl_derive = { path = "render_gl_derive" }
nalgebra = "0.23.0"
ncollide2d = "0.26.1"
image = "0.20"
rand = "0.7.3"
rand_distr = "0.2.2"
imgui = "0.5.0"
imgui-sdl2 = "0.12.0"
imgui-opengl-renderer = "0.9.0"

[build-dependencies]
walkdir = "2.1"

[features]
gl_debug = ["gl/debug"]
