[package]
name = "rainyday_gl"
version = "0.1.0"
authors = ["Amir Grozki <amirgrozki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1"
render_gl_derive = { path = "render_gl_derive" }
nalgebra = "0.23.0"
ncollide2d = "0.26.1"
image = "0.20"
rand = "0.7.3"
rand_distr = "0.2.2"
imgui = { version = "0.5.0", optional = true }
imgui-sdl2 = { version = "0.12.0", optional = true }
imgui-opengl-renderer = { version = "0.9.0", optional = true }
native-windows-gui = "1.0.7"
native-windows-derive = "1.0.2"
rust-ini = "0.16.0"
glutin = "0.25.1"
msgbox = "0.6.0"
winapi = { version =  "0.3.9", features = ["windef"] }

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]
debug = ["imgui", "imgui-sdl2", "imgui-opengl-renderer"]
