[package]
name = "rainyday"
version = "0.9.1"
authors = ["Amir Grozki <amirgrozki@gmail.com>"]
repository = "https://github.com/GeReV/rainyday"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "lib/gl" }
failure = "0.1"
render_gl_derive = { path = "render_gl_derive" }
nalgebra = "0.23.0"
ncollide2d = "0.26.1"
image = "0.20"
rand = "0.7.3"
rand_distr = "0.2.2"
imgui = { version = "0.5.0", optional = true }
imgui-opengl-renderer = { version = "0.9.0", optional = true }
imgui-winit-support = "0.5.0"
rust-ini = "0.16.0"
glutin = "0.24"

[target.'cfg(windows)'.dependencies]
native-windows-gui = "1.0.7"
native-windows-derive = "1.0.2"
winapi = { version =  "0.3.9", features = ["windef"] }

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]
debug = ["imgui", "imgui-opengl-renderer"]
